--- a/index.html
+++ b/index.html
@@ -55,61 +55,36 @@
     </div>
 </div>
 
+<div id="questions" class="hide">
+
+</div>
 
 
 
 
 
-
- 
-
-    <!-- 
-    <h2 class="d-flex justify-content-center"> Question goes here</h2>
+    
+    <h2 id="question"  class="d-flex justify-content-center"> Question goes here</h2>
     </div>
     <div class="container d-flex justify-content-center">
         <div class="row">
             <div id="answer-buttons" class="btn-group-vertical">
                 <div class="col-md">
-                    <button class="btn btn-outline-dark">Answer 1 goes here</button>
+                    <button id="answer1" class="btn btn-outline-dark">Answer 1 goes here</button>
                 </div>
                 <div class="col-md">
-                    <button class="btn btn-outline-dark">Answer 2 goes here</button>
+                    <button id="answer2" class="btn btn-outline-dark">Answer 2 goes here</button>
                 </div>
                 <div class="col-md">
-                    <button class="btn btn-outline-dark">Answer 3 goes here</button>
+                    <button id="answer3" class="btn btn-outline-dark">Answer 3 goes here</button>
                 </div>
                 <div class="col-md">
-                    <button class="btn btn-outline-dark">Answer 4 goes here</button>
+                    <button id="answer4" class="btn btn-outline-dark">Answer 4 goes here</button>
                 </div>
             </div>
-        </div> -->
+        </div>
 
-    <!-- <main class="background">
-            <section class="container-md pt-3 pb-3" >
-                <div class="col-md-12 col-sm-8 my-20 bg-light" >
-                    <div class="row" >
-                        <h1 class="time"></h1>
-                        <div id="main"></div>
-                    </div>
-                    <hr>
-            
-                    <div class="row">
-                        <button class="btn "><img  src="https://picsum.photos/350" alt="Sample Image" class="img-fluid"></div>
-                    </div>  
-                    <div class="row">
-                        <div class=" col-md-6 my-3"><img src="https://picsum.photos/350" alt="Sample Image" class="img-fluid"></div>
-                    </div>
-                    <div class="row">
-                        <div class=" col-md-6 my-3"><img src="https://picsum.photos/350" alt="Sample Image" class="img-fluid"></div>
-                    </div>
-                </div>
-            </section>
-        </main> -->
-
-
-
-
-
+  
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
