got questions to dicplay,  cycle and loop back

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="card-body">
                 <h5 class="card-title">Timed Quiz!</h5>
                 <p class="card-text">Finish quiz before timer runs out. Time will be deducted for wrong answers!</p>
-                <div id="answer-buttons" class="btn-group-vertical">
+                <div class="btn-group-vertical">
                     <div class="col-md">
                         <button id="startBtn"> Start Clock</button>
                     </div>
@@ -70,16 +70,16 @@
         <div class="row">
             <div id="answer-buttons" class="btn-group-vertical">
                 <div class="col-md">
-                    <button id="answer1" class="btn btn-outline-dark">Answer 1 goes here</button>
+                    <button id="answer1" class="btn ans-btn btn-outline-dark">Answer 1 goes here</button>
                 </div>
                 <div class="col-md">
-                    <button id="answer2" class="btn btn-outline-dark">Answer 2 goes here</button>
+                    <button id="answer2" class="btn ans-btn btn-outline-dark">Answer 2 goes here</button>
                 </div>
                 <div class="col-md">
-                    <button id="answer3" class="btn btn-outline-dark">Answer 3 goes here</button>
+                    <button id="answer3" class="btn ans-btn btn-outline-dark">Answer 3 goes here</button>
                 </div>
                 <div class="col-md">
-                    <button id="answer4" class="btn btn-outline-dark">Answer 4 goes here</button>
+                    <button id="answer4" class="btn ans-btn btn-outline-dark">Answer 4 goes here</button>
                 </div>
             </div>
         </div>
