added box for player initials

--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
 <div id="questions" class="hide">
 
 </div>
-
-
-
-
-
     
     <h2 id="question"  class="d-flex justify-content-center"> Question goes here</h2>
     </div>
@@ -84,6 +79,14 @@
             </div>
         </div>
 
+        <!--highschore text box-->
+        <div id="nameBox" style="display: none">
+            <p> Your score: <span id="scoreDisplay"></span>  </p>
+            
+            <label for="initials">Enter your initials below</label><br>
+            <input type="text" id="initials">
+            <button id="scoreBtn">Submit</button>
+        </div>
   
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
